--- a/Lib/RecCore.vcxproj
+++ b/Lib/RecCore.vcxproj
@@ -143,7 +143,32 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="emitter.cpp" />
-    <ClCompile Include="intel\ia32.cpp" />
+    <ClCompile Include="intel\ia32_a.cpp" />
+    <ClCompile Include="intel\ia32_b.cpp" />
+    <ClCompile Include="intel\ia32_c.cpp" />
+    <ClCompile Include="intel\ia32_d.cpp" />
+    <ClCompile Include="intel\ia32_e.cpp" />
+    <ClCompile Include="intel\ia32_f.cpp" />
+    <ClCompile Include="intel\ia32_g.cpp" />
+    <ClCompile Include="intel\ia32_h.cpp" />
+    <ClCompile Include="intel\ia32_i.cpp" />
+    <ClCompile Include="intel\ia32_j.cpp" />
+    <ClCompile Include="intel\ia32_k.cpp" />
+    <ClCompile Include="intel\ia32_l.cpp" />
+    <ClCompile Include="intel\ia32_m.cpp" />
+    <ClCompile Include="intel\ia32_n.cpp" />
+    <ClCompile Include="intel\ia32_o.cpp" />
+    <ClCompile Include="intel\ia32_p.cpp" />
+    <ClCompile Include="intel\ia32_q.cpp" />
+    <ClCompile Include="intel\ia32_r.cpp" />
+    <ClCompile Include="intel\ia32_s.cpp" />
+    <ClCompile Include="intel\ia32_t.cpp" />
+    <ClCompile Include="intel\ia32_u.cpp" />
+    <ClCompile Include="intel\ia32_v.cpp" />
+    <ClCompile Include="intel\ia32_w.cpp" />
+    <ClCompile Include="intel\ia32_x.cpp" />
+    <ClCompile Include="intel\ia32_y.cpp" />
+    <ClCompile Include="intel\ia32_z.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
