--- a/Test/Test.vcxproj.filters
+++ b/Test/Test.vcxproj.filters
@@ -21,5 +21,8 @@
     <ClCompile Include="asm_test.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="aes.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
